--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "prepare": "husky",
-    "lint": "eslint --fix . && prettier --write . && stylelint '**/*.scss' --fix",
+    "lint": "eslint --fix . && prettier --write . && stylelint **/*.scss --fix",
     "dev": "vite",
     "build": "npm run lint && vite build",
     "preview": "vite preview",
