--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "vite-plugin-stylelint": "^5.3.1"
   },
   "dependencies": {
+    "gsap": "npm:gsap-trial@^3.12.5",
+    "gsap-trial": "^3.12.5",
     "modern-normalize": "^3.0.0"
   }
 }
